--- a/app/src/main/res/layout/view_stats.xml
+++ b/app/src/main/res/layout/view_stats.xml
@@ -47,12 +47,12 @@
         android:contentDescription="@string/life_logo"
         android:src="@drawable/life"
 
-        android:layout_margin="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
 
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/stats_victory_image_view"
         app:layout_constraintTop_toBottomOf="@id/stats_victory_image_view"
         app:layout_constraintBottom_toTopOf="@id/stats_stamina_image_view"
-        app:layout_constraintEnd_toStartOf="@id/stats_life_value_text_view"
         />
 
     <TextView
@@ -60,14 +60,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_margin="4dp"
 
         android:text="@string/zero_value"
 
-        app:layout_constraintStart_toEndOf="@id/stats_life_image_view"
+        app:layout_constraintStart_toStartOf="@id/stats_victory_value_text_view"
         app:layout_constraintTop_toTopOf="@id/stats_life_image_view"
         app:layout_constraintBottom_toBottomOf="@id/stats_life_image_view"
-        app:layout_constraintEnd_toEndOf="parent"
         />
 
 
@@ -80,12 +78,12 @@
         android:contentDescription="@string/stamina_logo"
         android:src="@drawable/stamina"
 
-        android:layout_margin="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
 
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/stats_victory_image_view"
         app:layout_constraintTop_toBottomOf="@id/stats_life_image_view"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/stats_stamina_value_text_view"
         />
 
 
@@ -94,14 +92,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_margin="4dp"
-
         android:text="@string/zero_value"
 
-        app:layout_constraintStart_toEndOf="@id/stats_stamina_image_view"
+        app:layout_constraintStart_toStartOf="@+id/stats_victory_value_text_view"
         app:layout_constraintTop_toTopOf="@id/stats_stamina_image_view"
         app:layout_constraintBottom_toBottomOf="@id/stats_stamina_image_view"
-        app:layout_constraintEnd_toEndOf="parent"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
