[Layout] Make Dice screen and refacto fight screen

--- a/app/src/main/res/layout/fragment_fight.xml
+++ b/app/src/main/res/layout/fragment_fight.xml
@@ -7,10 +7,21 @@
     tools:context=".ui.fighter_screen.FightFragment">
 
     <ImageView
+        android:id="@+id/fight_background_image_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#41454142"
+        android:contentDescription="@string/img_desc_background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
         android:id="@+id/fight_bord_game_image_view"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:contentDescription="@string/board_game"
+        android:contentDescription="@string/img_desc_board_game"
         android:src="@drawable/tower"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,7 +32,7 @@
         android:id="@+id/fight_fighter_in_tower_image_view"
         android:layout_width="150dp"
         android:layout_height="175dp"
-        android:contentDescription="@string/card_fighter"
+        android:contentDescription="@string/img_desc_card_fighter"
         android:src="@drawable/ant_man"
         app:layout_constraintBottom_toBottomOf="@+id/fight_bord_game_image_view"
         app:layout_constraintEnd_toEndOf="@+id/fight_bord_game_image_view"
@@ -34,7 +45,7 @@
         android:layout_height="175dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:contentDescription="@string/card_fighter"
+        android:contentDescription="@string/img_desc_card_fighter"
         android:src="@drawable/ant_man"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -58,26 +69,12 @@
         app:layout_constraintTop_toTopOf="@+id/fight_fighter_top_left_name_text_view" />
 
     <fr.learnandrun.kingofheroes.ui.view.Stats
-        android:id="@+id/fight_fighter_top_left_victory_image_view"
+        android:id="@+id/fight_fighter_top_left_stats_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="10dp"
-        android:contentDescription="@string/card_fighter"
         app:layout_constraintStart_toStartOf="@+id/fight_fighter_top_left_card_image_view"
-        app:layout_constraintTop_toBottomOf="@id/fight_fighter_top_left_name_text_view"
-
-        />
-
-    <TextView
-        android:id="@+id/fight_fighter_bottom_left_victory_label_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:text="@string/max_victory_points"
-        app:layout_constraintBottom_toBottomOf="@+id/fight_fighter_bottom_left_victory_content_text_view"
-        app:layout_constraintStart_toEndOf="@+id/fight_fighter_bottom_left_victory_content_text_view"
-        app:layout_constraintTop_toTopOf="@+id/fight_fighter_bottom_left_victory_content_text_view" />
+        app:layout_constraintTop_toBottomOf="@id/fight_fighter_top_left_name_text_view" />
 
     <ImageView
         android:id="@+id/fight_fighter_top_right_card_image_view"
@@ -85,7 +82,7 @@
         android:layout_height="175dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:contentDescription="@string/card_fighter"
+        android:contentDescription="@string/img_desc_card_fighter"
         android:src="@drawable/ant_man"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -99,88 +96,13 @@
         app:layout_constraintStart_toStartOf="@+id/fight_fighter_top_right_card_image_view"
         app:layout_constraintTop_toBottomOf="@+id/fight_fighter_top_right_card_image_view" />
 
-    <ImageView
-        android:id="@+id/fight_fighter_top_right_victory_image_view"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+    <fr.learnandrun.kingofheroes.ui.view.Stats
+        android:id="@+id/fight_fighter_top_right_stats_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:contentDescription="@string/card_fighter"
-        android:src="@drawable/star"
-        app:layout_constraintBottom_toBottomOf="@+id/fight_fighter_top_right_victory_content_text_view"
         app:layout_constraintStart_toStartOf="@+id/fight_fighter_top_right_card_image_view"
-        app:layout_constraintTop_toTopOf="@+id/fight_fighter_top_right_victory_content_text_view" />
-
-    <TextView
-        android:id="@+id/fight_fighter_top_right_victory_content_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/zero_value"
-        app:layout_constraintStart_toEndOf="@+id/fight_fighter_top_right_victory_image_view"
-        app:layout_constraintTop_toBottomOf="@+id/fight_fighter_top_right_name_text_view" />
-
-    <TextView
-        android:id="@+id/fight_fighter_top_right_victory_label_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:text="@string/max_victory_points"
-        app:layout_constraintBottom_toBottomOf="@+id/fight_fighter_top_right_victory_content_text_view"
-        app:layout_constraintStart_toEndOf="@+id/fight_fighter_top_right_victory_content_text_view"
-        app:layout_constraintTop_toTopOf="@+id/fight_fighter_top_right_victory_content_text_view" />
-
-    <ImageView
-        android:id="@+id/fight_fighter_top_right_image_view"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:contentDescription="@string/card_fighter"
-        android:src="@drawable/life"
-        app:layout_constraintBottom_toBottomOf="@+id/fight_fighter_top_right_life_content_text_view"
-        app:layout_constraintEnd_toEndOf="@+id/fight_fighter_top_right_victory_image_view"
-        app:layout_constraintStart_toStartOf="@+id/fight_fighter_top_right_victory_image_view"
-        app:layout_constraintTop_toTopOf="@+id/fight_fighter_top_right_life_content_text_view" />
-
-    <TextView
-        android:id="@+id/fight_fighter_top_right_life_content_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/zero_value"
-        app:layout_constraintStart_toEndOf="@+id/fight_fighter_top_right_image_view"
-        app:layout_constraintTop_toBottomOf="@+id/fight_fighter_top_right_victory_content_text_view" />
-
-    <TextView
-        android:id="@+id/fight_fighter_top_right_life_label_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:text="@string/max_life"
-        app:layout_constraintBottom_toBottomOf="@+id/fight_fighter_top_right_life_content_text_view"
-        app:layout_constraintStart_toEndOf="@+id/fight_fighter_top_right_life_content_text_view"
-        app:layout_constraintTop_toTopOf="@+id/fight_fighter_top_right_life_content_text_view" />
-
-    <ImageView
-        android:id="@+id/fight_fighter_top_right_stamina_image_view"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:contentDescription="@string/card_fighter"
-        android:src="@drawable/stamina"
-        app:layout_constraintBottom_toBottomOf="@+id/fight_fighter_top_right_stamina_content_text_view"
-        app:layout_constraintEnd_toEndOf="@+id/fight_fighter_top_right_image_view"
-        app:layout_constraintStart_toStartOf="@+id/fight_fighter_top_right_image_view"
-        app:layout_constraintTop_toTopOf="@+id/fight_fighter_top_right_stamina_content_text_view" />
-
-    <TextView
-        android:id="@+id/fight_fighter_top_right_stamina_content_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/zero_value"
-        app:layout_constraintStart_toEndOf="@+id/fight_fighter_top_right_stamina_image_view"
-        app:layout_constraintTop_toBottomOf="@+id/fight_fighter_top_right_life_content_text_view" />
+        app:layout_constraintTop_toBottomOf="@id/fight_fighter_top_right_name_text_view" />
 
     <ImageView
         android:id="@+id/fight_fighter_bottom_left_card_image_view"
@@ -188,7 +110,7 @@
         android:layout_height="175dp"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp"
-        android:contentDescription="@string/card_fighter"
+        android:contentDescription="@string/img_desc_card_fighter"
         android:src="@drawable/ant_man"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -202,79 +124,13 @@
         app:layout_constraintEnd_toEndOf="@+id/fight_fighter_bottom_left_card_image_view"
         app:layout_constraintStart_toStartOf="@+id/fight_fighter_bottom_left_card_image_view" />
 
-    <ImageView
-        android:id="@+id/fight_fighter_bottom_left_stamina_image_view"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+    <fr.learnandrun.kingofheroes.ui.view.Stats
+        android:id="@+id/fight_fighter_bottom_left_stats_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:contentDescription="@string/card_fighter"
-        android:src="@drawable/stamina"
-        app:layout_constraintBottom_toBottomOf="@+id/fight_fighter_bottom_left_stamina_content_text_view"
         app:layout_constraintStart_toStartOf="@+id/fight_fighter_bottom_left_card_image_view"
-        app:layout_constraintTop_toTopOf="@+id/fight_fighter_bottom_left_stamina_content_text_view" />
-
-    <TextView
-        android:id="@+id/fight_fighter_bottom_left_stamina_content_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/zero_value"
-        app:layout_constraintBottom_toTopOf="@+id/fight_fighter_bottom_left_name_text_view"
-        app:layout_constraintStart_toEndOf="@+id/fight_fighter_bottom_left_stamina_image_view" />
-
-    <ImageView
-        android:id="@+id/fight_fighter_bottom_left_life_image_view"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:contentDescription="@string/card_fighter"
-        android:src="@drawable/life"
-        app:layout_constraintBottom_toBottomOf="@+id/fight_fighter_bottom_left_life_content_text_view"
-        app:layout_constraintEnd_toEndOf="@+id/fight_fighter_bottom_left_stamina_image_view"
-        app:layout_constraintStart_toStartOf="@+id/fight_fighter_bottom_left_stamina_image_view"
-        app:layout_constraintTop_toTopOf="@+id/fight_fighter_bottom_left_life_content_text_view" />
-
-    <TextView
-        android:id="@+id/fight_fighter_bottom_left_life_content_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/zero_value"
-        app:layout_constraintBottom_toTopOf="@+id/fight_fighter_bottom_left_stamina_content_text_view"
-        app:layout_constraintStart_toEndOf="@+id/fight_fighter_bottom_left_life_image_view" />
-
-    <TextView
-        android:id="@+id/fight_fighter_bottom_left_life_label_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:text="@string/max_life"
-        app:layout_constraintBottom_toBottomOf="@+id/fight_fighter_bottom_left_life_content_text_view"
-        app:layout_constraintStart_toEndOf="@+id/fight_fighter_bottom_left_life_content_text_view"
-        app:layout_constraintTop_toTopOf="@+id/fight_fighter_bottom_left_life_content_text_view" />
-
-    <ImageView
-        android:id="@+id/fight_fighter_bottom_left_victory_image_view"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:contentDescription="@string/card_fighter"
-        android:src="@drawable/star"
-        app:layout_constraintBottom_toBottomOf="@+id/fight_fighter_bottom_left_victory_content_text_view"
-        app:layout_constraintEnd_toEndOf="@+id/fight_fighter_bottom_left_life_image_view"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/fight_fighter_bottom_left_life_image_view"
-        app:layout_constraintTop_toTopOf="@+id/fight_fighter_bottom_left_victory_content_text_view" />
-
-    <TextView
-        android:id="@+id/fight_fighter_bottom_left_victory_content_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/zero_value"
-        app:layout_constraintBottom_toTopOf="@+id/fight_fighter_bottom_left_life_content_text_view"
-        app:layout_constraintStart_toEndOf="@+id/fight_fighter_bottom_left_victory_image_view" />
+        app:layout_constraintBottom_toTopOf="@id/fight_fighter_bottom_left_name_text_view" />
 
     <ImageView
         android:id="@+id/fight_fighter_bottom_right_card_image_view"
@@ -282,10 +138,18 @@
         android:layout_height="175dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:contentDescription="@string/card_fighter"
+        android:contentDescription="@string/img_desc_card_fighter"
         android:src="@drawable/ant_man"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <fr.learnandrun.kingofheroes.ui.view.Stats
+        android:id="@+id/fight_fighter_bottom_right_stats_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        app:layout_constraintStart_toStartOf="@+id/fight_fighter_bottom_right_card_image_view"
+        app:layout_constraintBottom_toTopOf="@id/fight_fighter_bottom_right_name_text_view" />
 
     <TextView
         android:id="@+id/fight_fighter_bottom_right_name_text_view"
@@ -295,88 +159,5 @@
         app:layout_constraintBottom_toTopOf="@+id/fight_fighter_bottom_right_card_image_view"
         app:layout_constraintEnd_toEndOf="@+id/fight_fighter_bottom_right_card_image_view"
         app:layout_constraintStart_toStartOf="@+id/fight_fighter_bottom_right_card_image_view" />
-
-    <ImageView
-        android:id="@+id/fight_fighter_bottom_right_stamina_image_view"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="32dp"
-        android:contentDescription="@string/card_fighter"
-        android:src="@drawable/stamina"
-        app:layout_constraintBottom_toBottomOf="@+id/fight_fighter_bottom_right_stamina_content_text_view"
-        app:layout_constraintStart_toStartOf="@+id/fight_fighter_bottom_right_card_image_view"
-        app:layout_constraintTop_toTopOf="@+id/fight_fighter_bottom_right_stamina_content_text_view" />
-
-    <TextView
-        android:id="@+id/fight_fighter_bottom_right_stamina_content_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/zero_value"
-        app:layout_constraintBottom_toTopOf="@+id/fight_fighter_bottom_right_name_text_view"
-        app:layout_constraintStart_toEndOf="@+id/fight_fighter_bottom_right_stamina_image_view" />
-
-    <ImageView
-        android:id="@+id/fight_fighter_bottom_right_life_image_view"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:contentDescription="@string/card_fighter"
-        android:src="@drawable/life"
-        app:layout_constraintBottom_toBottomOf="@+id/fight_fighter_bottom_right_life_content_text_view"
-        app:layout_constraintEnd_toEndOf="@+id/fight_fighter_bottom_right_stamina_image_view"
-        app:layout_constraintStart_toStartOf="@+id/fight_fighter_bottom_right_stamina_image_view"
-        app:layout_constraintTop_toTopOf="@+id/fight_fighter_bottom_right_life_content_text_view" />
-
-    <TextView
-        android:id="@+id/fight_fighter_bottom_right_life_content_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/zero_value"
-        app:layout_constraintBottom_toTopOf="@+id/fight_fighter_bottom_right_stamina_content_text_view"
-        app:layout_constraintStart_toEndOf="@+id/fight_fighter_bottom_right_life_image_view" />
-
-    <TextView
-        android:id="@+id/fight_fighter_bottom_right_life_label_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="19dp"
-        android:layout_marginStart="4dp"
-        android:text="@string/max_life"
-        app:layout_constraintBottom_toBottomOf="@+id/fight_fighter_bottom_right_life_content_text_view"
-        app:layout_constraintStart_toEndOf="@+id/fight_fighter_bottom_right_life_content_text_view"
-        app:layout_constraintTop_toTopOf="@+id/fight_fighter_bottom_right_life_content_text_view" />
-
-    <ImageView
-        android:id="@+id/fight_fighter_bottom_right_victory_image_view"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:contentDescription="@string/card_fighter"
-        android:src="@drawable/star"
-        app:layout_constraintBottom_toBottomOf="@+id/fight_fighter_bottom_right_victory_content_text_view"
-        app:layout_constraintEnd_toEndOf="@+id/fight_fighter_bottom_right_life_image_view"
-        app:layout_constraintStart_toStartOf="@+id/fight_fighter_bottom_right_life_image_view"
-        app:layout_constraintTop_toTopOf="@+id/fight_fighter_bottom_right_victory_content_text_view" />
-
-    <TextView
-        android:id="@+id/fight_fighter_bottom_right_victory_content_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/zero_value"
-        app:layout_constraintBottom_toTopOf="@+id/fight_fighter_bottom_right_life_content_text_view"
-        app:layout_constraintStart_toEndOf="@+id/fight_fighter_bottom_right_victory_image_view" />
-
-    <TextView
-        android:id="@+id/fight_fighter_bottom_right_victory_label_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:text="@string/max_victory_points"
-        app:layout_constraintBottom_toBottomOf="@+id/fight_fighter_bottom_right_victory_content_text_view"
-        app:layout_constraintStart_toEndOf="@+id/fight_fighter_bottom_right_victory_content_text_view"
-        app:layout_constraintTop_toTopOf="@+id/fight_fighter_bottom_right_victory_content_text_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
