--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <declare-styleable name="Stats">
+    <declare-styleable name="StatsView">
         <attr name="victory" format="string" />
         <attr name="life" format="string" />
         <attr name="stamina" format="string" />
