--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -54,4 +54,20 @@
         app:layout_constraintVertical_bias="0.384"
         tools:text="@string/play" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/btn_rounded"
+        android:fontFamily="@font/marvel"
+        android:textColor="#FFB751"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.95"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/home_play_button"
+        app:layout_constraintVertical_bias="0.827"
+        tools:text="@string/rules" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
