--- a/app/src/main/res/layout/fragment_select_fighter.xml
+++ b/app/src/main/res/layout/fragment_select_fighter.xml
@@ -37,52 +37,48 @@
         tools:text="@string/choose_your_hero" />
 
 
-
-
     <TextView
         android:id="@+id/select_fighter_name_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="244dp"
         android:fontFamily="@font/marvel"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.242" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/select_fighter_preview_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginBottom="128dp"
         android:background="@drawable/arrow_left"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/select_fighter_name_text_view"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintHorizontal_bias="0.217"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/select_fighter_next_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="128dp"
         android:background="@drawable/arrow_right"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/select_fighter_name_text_view"
-        app:layout_constraintVertical_bias="0.025" />
+        app:layout_constraintHorizontal_bias="0.774"
+        app:layout_constraintStart_toEndOf="@+id/select_fighter_name_text_view" />
 
     <Button
         android:id="@+id/select_fighter_choose_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="128dp"
         android:background="@drawable/btn_rounded"
         android:gravity="center|center_vertical"
         android:textColor="#FFB751"
@@ -90,7 +86,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/select_fighter_name_text_view"
-        app:layout_constraintVertical_bias="0.0"
         tools:text="@string/choose" />
 </androidx.constraintlayout.widget.ConstraintLayout>
