--- a/app/src/main/res/layout/fragment_board.xml
+++ b/app/src/main/res/layout/fragment_board.xml
@@ -1,8 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/transparentGray"
     tools:context=".ui.board_screen.BoardFragment">
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/bord_game_image_view"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:contentDescription="@string/img_desc_board_game"
+        android:src="@drawable/tower"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/board_fighter_in_tower_image_view"
+        android:layout_width="150dp"
+        android:layout_height="175dp"
+        android:contentDescription="@string/img_desc_card_fighter"
+        android:src="@drawable/ant_man"
+        app:layout_constraintBottom_toBottomOf="@+id/bord_game_image_view"
+        app:layout_constraintEnd_toEndOf="@+id/bord_game_image_view"
+        app:layout_constraintStart_toStartOf="@+id/bord_game_image_view"
+        app:layout_constraintTop_toTopOf="@+id/bord_game_image_view" />
+
+    <ImageView
+        android:id="@+id/board_fighter_top_left_card_image_view"
+        android:layout_width="150dp"
+        android:layout_height="175dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:contentDescription="@string/img_desc_card_fighter"
+        android:src="@drawable/ant_man"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/board_fighter_top_left_name_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/ant_man"
+        app:layout_constraintEnd_toEndOf="@+id/board_fighter_top_left_card_image_view"
+        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintStart_toStartOf="@+id/board_fighter_top_left_card_image_view"
+        app:layout_constraintTop_toBottomOf="@+id/board_fighter_top_left_card_image_view" />
+
+    <TextView
+        android:id="@+id/board_fighter_top_left_you_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/you"
+        app:layout_constraintLeft_toRightOf="@+id/board_fighter_top_left_name_text_view"
+        app:layout_constraintTop_toTopOf="@+id/board_fighter_top_left_name_text_view" />
+
+    <fr.learnandrun.kingofheroes.ui.view.StatsView
+        android:id="@+id/board_fighter_top_left_stats_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        app:layout_constraintStart_toStartOf="@+id/board_fighter_top_left_card_image_view"
+        app:layout_constraintTop_toBottomOf="@id/board_fighter_top_left_name_text_view" />
+
+    <ImageView
+        android:id="@+id/board_fighter_top_right_card_image_view"
+        android:layout_width="150dp"
+        android:layout_height="175dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:contentDescription="@string/img_desc_card_fighter"
+        android:src="@drawable/ant_man"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/board_fighter_top_right_name_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/ant_man"
+        app:layout_constraintEnd_toEndOf="@+id/board_fighter_top_right_card_image_view"
+        app:layout_constraintStart_toStartOf="@+id/board_fighter_top_right_card_image_view"
+        app:layout_constraintTop_toBottomOf="@+id/board_fighter_top_right_card_image_view" />
+
+    <fr.learnandrun.kingofheroes.ui.view.StatsView
+        android:id="@+id/board_fighter_top_right_stats_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        app:layout_constraintStart_toStartOf="@+id/board_fighter_top_right_card_image_view"
+        app:layout_constraintTop_toBottomOf="@id/board_fighter_top_right_name_text_view" />
+
+    <ImageView
+        android:id="@+id/board_fighter_bottom_left_card_image_view"
+        android:layout_width="150dp"
+        android:layout_height="175dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
+        android:contentDescription="@string/img_desc_card_fighter"
+        android:src="@drawable/ant_man"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/board_fighter_bottom_left_name_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/ant_man"
+        app:layout_constraintBottom_toTopOf="@+id/board_fighter_bottom_left_card_image_view"
+        app:layout_constraintEnd_toEndOf="@+id/board_fighter_bottom_left_card_image_view"
+        app:layout_constraintStart_toStartOf="@+id/board_fighter_bottom_left_card_image_view" />
+
+    <fr.learnandrun.kingofheroes.ui.view.StatsView
+        android:id="@+id/board_fighter_bottom_left_stats_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        app:layout_constraintStart_toStartOf="@+id/board_fighter_bottom_left_card_image_view"
+        app:layout_constraintBottom_toTopOf="@id/board_fighter_bottom_left_name_text_view" />
+
+    <ImageView
+        android:id="@+id/board_fighter_bottom_right_card_image_view"
+        android:layout_width="150dp"
+        android:layout_height="175dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:contentDescription="@string/img_desc_card_fighter"
+        android:src="@drawable/ant_man"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <fr.learnandrun.kingofheroes.ui.view.StatsView
+        android:id="@+id/board_fighter_bottom_right_stats_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        app:layout_constraintStart_toStartOf="@+id/board_fighter_bottom_right_card_image_view"
+        app:layout_constraintBottom_toTopOf="@id/board_fighter_bottom_right_name_text_view" />
+
+    <TextView
+        android:id="@+id/board_fighter_bottom_right_name_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/ant_man"
+        app:layout_constraintBottom_toTopOf="@+id/board_fighter_bottom_right_card_image_view"
+        app:layout_constraintEnd_toEndOf="@+id/board_fighter_bottom_right_card_image_view"
+        app:layout_constraintStart_toStartOf="@+id/board_fighter_bottom_right_card_image_view" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
