[Refacto+Nav] Refacto select + nav to board

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -34,6 +34,9 @@
         <action
             android:id="@+id/action_boardFragment_to_finalScreenFragment"
             app:destination="@id/finalScreenFragment" />
+        <argument
+            android:name="selectedHero"
+            app:argType="fr.learnandrun.kingofheroes.business.Hero" />
     </fragment>
     <fragment
         android:id="@+id/diceFragment"
